--- a/client/src/components/modules/Chat.css
+++ b/client/src/components/modules/Chat.css
@@ -12,6 +12,12 @@
   
 }
 
+.Chat-newContainer h4 {
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-size: 1.1em;
+}
+
 .Chat-historyContainer {
   display: flex;
   flex-direction: column-reverse;
