--- a/client/src/components/modules/NewPostInput.css
+++ b/client/src/components/modules/NewPostInput.css
@@ -12,13 +12,15 @@
 }
 
 .inputBox {
-  padding: 10px
+  padding: 10px;
+  margin-bottom: 5px;
+
 }
 
 .NewPostInput-input {
   flex-grow: 1;
   border: var(--darkgrey) 1px solid;
-  border-radius: var(--s);
+  border-radius: 15px;
   transition: box-shadow 0.1s;
   margin-left: var(--commonMargin);
   margin-right: auto;
