--- a/client/src/components/modules/Chat.css
+++ b/client/src/components/modules/Chat.css
@@ -8,17 +8,21 @@
   flex-direction: column-reverse;
   width: 100%;
   margin-left: none;
-
-  
 }
 
 .Chat-historyContainer {
   display: flex;
+  width: 100%;
   flex-direction: column-reverse;
   flex-grow: 1;
-
   overflow-x: visible;
   overflow-y: auto;
   margin-left: 10%;
   margin-right: 10%;
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+}
+
+.Chat-historyContainer::-webkit-scrollbar {
+  display: none;
 }
