--- a/client/src/components/pages/Skeleton.css
+++ b/client/src/components/pages/Skeleton.css
@@ -83,9 +83,14 @@ body {
 /*making lobby boxes */
 .minesweeperButtonContainer {
   margin: none;
-
   height: calc(78vh - 120px);
   overflow-y: scroll;
+  -ms-overflow-style: none;  
+  scrollbar-width: none;  
+}
+
+.minesweeperButtonContainer::-webkit-scrollbar {
+  display: none;
 }
 
 .minesweeperButton > * {
