--- a/client/src/components/pages/Skeleton.css
+++ b/client/src/components/pages/Skeleton.css
@@ -161,6 +161,10 @@ body {
   margin-bottom: 30px;
 }
 
+.roomCount h3 {
+  padding-bottom: 10px;
+}
+
 .rulesBox {
   /* edit!! */
   margin: var(--sper) var(--mper) var(--sper) var(--mper);
