--- a/client/src/components/modules/CodePopup.css
+++ b/client/src/components/modules/CodePopup.css
@@ -1,30 +1,43 @@
 .popup-box {
     position: fixed;
+    padding-left: 50%;
+    padding-right: 50%;
     background: #00000070;
     width: 100%;
     height: 100vh;
     top: 0;
     left: 0;
     z-index: 9999;
+
   }
    
-  .box {
-    position: relative;
-    width: 60%;
-    margin: 0 auto;
-    height: auto;
-    max-height: 70vh;
-    margin-top: calc(100vh - 85vh - 20px);
-    background: var(--primary);
-    border-radius: 20px;
-    padding: 20px;
-    padding-bottom: 40px;
-    border: none;
-    overflow: auto;
+.box {
+  position: fixed;
+  left: 30%;
+  top: calc(100vh - 85vh - 20px);
+  left: 20%;
 
-    color: gray;
-  }
+  width: 80%;
 
+
+  display: flex;
+
+  max-height: 70vh;
+  background: var(--primary);
+  border-radius: 20px;
+  padding: 20px 25vw 40px 25vw;
+
+
+  border: none;
+
+  color: gray;
+}
+
+.box input {
+  width: 15vmin;
+  text-align: center;
+  margin-bottom: 10px;
+}
    
   .close-icon {
     content: 'x';
