--- a/client/src/components/modules/ProgressBars.css
+++ b/client/src/components/modules/ProgressBars.css
@@ -1,5 +1,6 @@
 .progressBars {
   margin-top: 15px;
+  
 
   text-align: center;
 
@@ -7,11 +8,15 @@
   flex-direction: column;
   align-items: center;
 
-  width: 52vmin;
+  width: 100%;
 
 
   height: 80vh;
   overflow-y: scroll;
+
+
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .progressBars h3 {
@@ -25,6 +30,7 @@
   border-color: gray;
   border-style: solid;
   margin-top: 15px;
+  margin-bottom: 15px;
   width: 90%;
 
   border-radius: 20px;
@@ -61,7 +67,7 @@
 .progressHolderDone div {
   display: flex;
   align-items: center;
-  background-color: var(--purple2);
+  background-color: pink;
   height: 40px;
   border-radius: 15px;
 }
