--- a/client/src/components/modules/ProgressBars.css
+++ b/client/src/components/modules/ProgressBars.css
@@ -1,6 +1,5 @@
 .progressBars {
   margin-top: 15px;
-  
 
   text-align: center;
 
@@ -10,13 +9,16 @@
 
   width: 100%;
 
-
   height: 80vh;
   overflow-y: scroll;
 
-
   padding-left: 10px;
   padding-right: 10px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.progressBars::-webkit-scrollbar {
+  display: none;
 }
 
 .progressBars h3 {
@@ -34,11 +36,7 @@
   width: 90%;
 
   border-radius: 20px;
-
-
-
 }
-
 
 .progressHolder div {
   display: flex;
@@ -97,6 +95,6 @@
 
 .progressHolderFrozen div h4 {
   font-size: 2em;
-  width:100%;
+  width: 100%;
   padding-left: 10px;
 }
