--- a/client/src/components/pages/Leaderboard.css
+++ b/client/src/components/pages/Leaderboard.css
@@ -1,52 +1,56 @@
 .scores {
-    background-color: pink;
-    margin: 25px;
-    margin-top: 30px;
-    padding: 20px;
-    width: 28%;
-    height: 68vh;
-    border-radius: 30px;
+  background-color: pink;
+  margin: 25px;
+  margin-top: 30px;
+  padding: 20px;
+  width: 28%;
+  height: 68vh;
+  border-radius: 30px;
 
-    box-shadow: 0 0 7px 2px gray;
-
+  box-shadow: 0 0 7px 2px gray;
 }
 
 .scores h1 {
-    margin: 2px;
-    font-size: 5vh;
+  margin: 2px;
+  font-size: 5vh;
 }
 
 .scores h3 {
-    margin: 10px;
-    font-size: 3vh;
+  margin: 10px;
+  font-size: 3vh;
 }
 
 table * {
-    font-size: 2vh;
+  font-size: 2vh;
 }
 
 .header * {
-    font-size: 2.2vh;
-    font-weight: bold;
-    text-decoration: none;
+  font-size: 2.2vh;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .leaderTitle {
-    margin-bottom: 0;
-    margin-top: 40px;
-    font-size: 6vh;
+  margin-bottom: 0;
+  margin-top: 40px;
+  font-size: 6vh;
 }
 .scoreHolder {
-    justify-content: space-between;
-    overflow: scroll;
+  justify-content: space-between;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.scoreHolder::-webkit-scrollbar {
+  display: none;
 }
 
 a {
-  color: black
+  color: black;
 }
 
 .scrollTable {
-    height: 50vh;
-    overflow-x: hidden;
-    overflow-y: auto;
+  height: 50vh;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
