--- a/client/src/components/modules/SingleMessage.css
+++ b/client/src/components/modules/SingleMessage.css
@@ -16,14 +16,16 @@
 
 .Chatbook-container .messageyeet {
   border-radius: var(--s);
-  width: 18vw;
+  padding-left: 8px;
+  width: 19vw;
   overflow-wrap: break-word;
   hyphens: auto;
 }
 
 .Chatbook-container-2 .messageyeet {
   border-radius: var(--s);
-  width: 14vw;
+  padding-left: 5px;
+  width: 18vw;
   overflow-wrap: break-word;
   hyphens: auto;
 }
