--- a/client/src/components/pages/Game.css
+++ b/client/src/components/pages/Game.css
@@ -11,7 +11,7 @@
   grid-auto-rows: 0;
   grid-auto-columns: 0;
 
-  padding: 20px;
+  padding: 5vw;
   border-radius: 15px;
   text-align: center;
 }
@@ -39,7 +39,7 @@
   grid-auto-rows: 0;
   grid-auto-columns: 0;
 
-  padding: 20px;
+  padding: 1.5vw;
   border-radius: 15px;
   text-align: center;
 
@@ -73,7 +73,7 @@ small h1 {
   grid-auto-rows: 0;
   grid-auto-columns: 0;
 
-  padding: 20px;
+  padding: 1.5vw;
   border-radius: 15px;
   text-align: center;
 
@@ -106,7 +106,7 @@ small h1 {
   grid-auto-rows: 0;
   grid-auto-columns: 0;
 
-  padding: 20px;
+  padding: 1.5vw;
   border-radius: 15px;
   text-align: center;
 
