--- a/client/src/components/modules/CodePopup.css
+++ b/client/src/components/modules/CodePopup.css
@@ -43,6 +43,8 @@
     content: 'x';
     cursor: pointer;
     position: fixed;
+    /* float:right; */
+
     right: calc(20% - 30px);
     top: calc(100vh - 85vh - 33px);
     background: var(--purple2);
