--- a/client/src/components/pages/Game.css
+++ b/client/src/components/pages/Game.css
@@ -1,5 +1,5 @@
 .game-board {
-  background-color: var(--primary);
+  background-color: var(--pink);
   /* width: 120vmin;
     height: 64vmin; */
   /* margin-left: 2%;
