--- a/client/src/components/pages/Howtoplay.css
+++ b/client/src/components/pages/Howtoplay.css
@@ -1,7 +1,7 @@
 .rulesBox {
   /* edit!! */
   margin: var(--sper) var(--mper) var(--sper) var(--mper);
-  background-color: pink;
+  background-color: var(--pink);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
