--- a/client/src/components/pages/PlayRoom.css
+++ b/client/src/components/pages/PlayRoom.css
@@ -16,7 +16,7 @@
 
 .button {
   border: none;
-  background-color: pink;
+  background-color: var(--pink);
   /* color: white; */
 
   margin-right: 0;
