--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -33,16 +33,18 @@ Added colors
 
 
 :root {
-  --primary: #b9e6ff;
   --primary--dim: #3dbbff;
   --progress-green: aquamarine;
-  --purple1: #AF90A9;
   --purple2: #ffa2ca;
   --primary3: #ffffff;
   --darkgrey: #575757;
   --medgrey: #acacac;
   --grey: #8f898c;
   --white: #fff;
+
+  --purple1: #AF90A9;
+  --primary: #b9e6ff;
+  --pink: #f391a0;
 
   --xs: 4px;
   --s: 8px;
@@ -110,4 +112,26 @@ form {
 
 .u-link:hover {
   color: var(--primary--dim);
+}
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
