--- a/client/src/components/pages/PlayRoom.css
+++ b/client/src/components/pages/PlayRoom.css
@@ -37,7 +37,6 @@
   top: 0;
   right: 0;
 
-
   font-family: "Montserrat", sans-serif;
 }
 
@@ -73,7 +72,6 @@ button {
   font-size: 2vmin;
 }
 
-
 .gameRoom.game-board {
   flex-grow: 1;
 }
@@ -81,7 +79,7 @@ button {
 .progressBars {
   flex-basis: 20%;
   flex-grow: 0;
-  flex-shrink: 0;  
+  flex-shrink: 0;
 
   /* background-color: var(--purple1); */
   /* border-radius: 30px; */
@@ -101,7 +99,6 @@ button {
   height: 100%;
 
   box-shadow: 0 0 7px 2px gray;
-
 }
 
 .gameChat h2 {
@@ -159,7 +156,6 @@ button {
   width: 100%;
 }
 
-
 .settings {
   align-content: center;
   justify-content: space-between;
@@ -193,4 +189,44 @@ button {
 
 .timeAndProgress h1 {
   margin: none;
+}
+
+.best {
+  position: absolute;
+  top: 8%;
+
+  left: 50%;
+  transform: translate(-50%, 0);
+  font-size: 5vw;
+
+  animation: poof 10s normal forwards;
+  /* animation-delay: 2s; */
+  visibility: hidden;
+  font-style: italic;
+
+  font-weight: bold;
+}
+
+@keyframes poof {
+  0% {
+    opacity: 0;
+    z-index: -1;
+    display: none;
+  }
+  5% {
+    z-index: 999999;
+    opacity: 0;
+    visibility: visible;
+  }
+  50% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+    display: none;
+  }
 }
