--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -3,16 +3,83 @@
   background-color: white;
   box-shadow: 0 0 12px 12px white;
   height: 50px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  font-size: 20px;
 }
 
 .NavBar-title,
 .NavBar-title:visited {
+  position: absolute;
+  left: 50vw;
+  transform: translateX(-50%);
   color: var(--black);
-  font-size: 20px;
+  font-size: 40px;
+  margin-top: 15px ;
+
+  font-style:italic;
+  font-weight: bold;
+
+	letter-spacing:0.1em;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: white;
+
+
+  text-shadow: 
+						0 1 30px var(--primary),
+						0 0 10px var(--purple2),
+            0 0 10px var(--pink);
+  animation-duration: 1s;
+  animation-iteration-count: 1 ;
 }
 
+.titleAnime:hover {
+  animation-name: squeeze;
+}
+@keyframes squeeze {
+0%   {   text-shadow: 
+  0px 0px 3px var(--primary),
+  0px 0px 3px var(--purple2),
+  0 0 3px var(--pink); }
+20%  { text-shadow: 
+  1px 1px 3px var(--primary),
+  3px 3px 3px var(--purple2),
+  -2px -2px 3px var(--pink); }
+
+50% { text-shadow: 
+  5px 5px 3px var(--primary),
+  15px 15px 3px var(--purple2),
+  -10px -10px 3px var(--pink); }
+80%  { text-shadow: 
+  1px 1px 3px var(--primary),
+  3px 3px 3px var(--purple2),
+  -2px -2px 3px var(--pink); }
+100%   {   text-shadow: 
+  0px 0px 3px var(--primary),
+  0px 0px 3px var(--purple2),
+  0 0 3px var(--pink); }
+}
+
+
+
+
 .NavBar-linkContainer {
-  margin-left: var(--l);
+  position: absolute;
+  top: 20px;
+  left: 30px;
+}
+
+.linkAnimation {
+  transition-duration: .5s;
+  font-weight: bold;
+}
+
+.linkAnimation:hover {
+ text-shadow: 0 0 10px var(--purple1);
 }
 
 .NavBar-link,
@@ -20,10 +87,12 @@
   color: var(--black);
   opacity: 0.6;
   text-decoration: none;
+  margin-right: 20px;
 }
 
 .NavBar-link:hover {
   opacity: 0.8;
+ 
 }
 
 .NavBar-link + .NavBar-link {
@@ -45,8 +114,9 @@
 }
 
 .userStuff {
-  float: right;
-}
+  position: absolute;
+  top: 20px;
+  right: 20px;}
 
 .userStuff > * {
   margin-right: 10px;
