--- a/client/src/components/pages/Howtoplay.css
+++ b/client/src/components/pages/Howtoplay.css
@@ -2,7 +2,7 @@
   /* edit!! */
   margin: var(--sper) var(--mper) var(--sper) var(--mper);
   background-color: var(--pink);
-  padding: 15px 32px;
+  padding: 15px 32px 40px 32px;
   text-align: center;
   text-decoration: none;
   display: block;
