--- a/client/src/components/pages/Leaderboard.css
+++ b/client/src/components/pages/Leaderboard.css
@@ -35,7 +35,10 @@ table * {
 .leaderTitle {
   margin-bottom: 0;
   margin-top: 40px;
-  font-size: 6vh;
+  font-size: 5vh;
+  font-weight: lighter;
+
+  color: rgb(82, 82, 82)
 }
 .scoreHolder {
   justify-content: space-between;
@@ -43,12 +46,9 @@ table * {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-.scoreHolder::-webkit-scrollbar {
-  display: none;
-}
 
 a {
-  color: black;
+    color: var(--black);
 }
 
 .scrollTable {
