--- a/client/src/components/modules/CodePopup.css
+++ b/client/src/components/modules/CodePopup.css
@@ -1,10 +1,8 @@
 .popup-box {
   position: fixed;
-  padding-left: 50%;
-  padding-right: 50%;
   background: #00000070;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
   z-index: 9999;
@@ -12,18 +10,18 @@
 
 .box {
   position: fixed;
-  left: 30%;
   top: calc(100vh - 85vh - 20px);
-  left: 20%;
+  left: 30%;
 
-  width: 80%;
+  width: 40%;
 
   display: flex;
+  flex-direction: column;
+  align-items: center;
 
   max-height: 70vh;
   background: var(--primary);
   border-radius: 20px;
-  padding: 20px 25vw 40px 25vw;
 
   border: none;
 
@@ -31,23 +29,36 @@
 }
 
 .box input {
-  width: 15vmin;
+  width: 40%;
   text-align: center;
 
   margin-bottom: 10px;
+  margin-top: 20px;
+  margin: auto 0;
 
   float: center;
 
   font-size: 1em;
+}
+.box h3 {
+  font-size: 1em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.box button {
+  background-color: var(--purple1);
+  color: black;
+  font-size: 1.1em;
+  margin-bottom: 20px;
 }
 
 .close-icon {
   content: "x";
   cursor: pointer;
   position: fixed;
-  right: calc(20% - 30px);
+  right: calc(30% - 15px);
   top: calc(100vh - 85vh - 33px);
-  background: var(--purple2);
+  background: var(--purple1);
   width: 25px;
   height: 25px;
   border-radius: 50%;
