--- a/client/src/components/pages/Skeleton.css
+++ b/client/src/components/pages/Skeleton.css
@@ -160,23 +160,19 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 } 
-.ongoing {
+.progress {
   background-image: url("../../public/images/emptytemp.png");
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .minesweeperButton:hover {
-  opacity: 1;
+  opacity: 1; 
   color: var(--black);
 }
 
 .minesweeperButton:active {
   opacity: 0.5;
-
-  /* background-image: url("../../public/images/minetemp.png");
-  background-repeat: no-repeat;
-  background-size: contain; */
 }
 
 .roomCount {
@@ -191,7 +187,7 @@ body {
 .rulesBox {
   /* edit!! */
   margin: var(--sper) var(--mper) var(--sper) var(--mper);
-  background-color: var(--grey);
+  /* background-color: var(--grey); */
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
