--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -31,7 +31,7 @@
 
   text-shadow: 
 						0 1 30px var(--primary),
-						0 0 10px var(--purple2),
+						0 0 10px var(--purple1),
             0 0 10px var(--pink);
   animation-duration: 1s;
   animation-iteration-count: 1 ;
@@ -42,26 +42,26 @@
 }
 @keyframes squeeze {
 0%   {   text-shadow: 
-  0px 0px 3px var(--primary),
   0px 0px 3px var(--purple2),
-  0 0 3px var(--pink); }
+  0px 0px 3px var(--purple1),
+  0 0 3px var(--purple3); }
 20%  { text-shadow: 
-  1px 1px 3px var(--primary),
-  3px 3px 3px var(--purple2),
-  -2px -2px 3px var(--pink); }
+  1px 1px 3px var(--purple2),
+  3px 3px 3px var(--purple1),
+  -2px -2px 3px var(--purple3); }
 
 50% { text-shadow: 
-  5px 5px 3px var(--primary),
-  15px 15px 3px var(--purple2),
-  -10px -10px 3px var(--pink); }
+  5px 5px 3px var(--purple2),
+  15px 15px 3px var(--purple1),
+  -10px -10px 3px var(--purple3); }
 80%  { text-shadow: 
-  1px 1px 3px var(--primary),
-  3px 3px 3px var(--purple2),
-  -2px -2px 3px var(--pink); }
+  1px 1px 3px var(--purple2),
+  3px 3px 3px var(--purple1),
+  -2px -2px 3px var(--purple3); }
 100%   {   text-shadow: 
-  0px 0px 3px var(--primary),
   0px 0px 3px var(--purple2),
-  0 0 3px var(--pink); }
+  0px 0px 3px var(--purple1),
+  0 0 3px var(--purple3); }
 }
 
 
@@ -79,7 +79,7 @@
 }
 
 .linkAnimation:hover {
- text-shadow: 0 0 10px var(--purple1);
+ text-shadow: 0 0 3px var(--purple3);
 }
 
 .NavBar-link,
