--- a/client/src/components/pages/Howtoplay.css
+++ b/client/src/components/pages/Howtoplay.css
@@ -11,4 +11,18 @@
   box-shadow: 0 0 15px 2px gray;
 
   /* color: white; */
+
+  animation: fadeInAnimation 2s forwards;
+  animation-iteration-count: 1;
+  animation-duration: 2s;
+
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+   }
 }
