--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -43,8 +43,8 @@ Added colors
 
   --purple1: #cdc1ff;
   --purple3: #9084c2;
-  --primary: #e5d9f2;
-  --pink: rgb(245, 239, 255);
+  --primary: #cfbfe0;
+  --pink: rgb(237, 225, 255);
   --pinkeu: 245, 239, 255;
 
   --xs: 4px;
