--- a/client/src/components/pages/Game.css
+++ b/client/src/components/pages/Game.css
@@ -1,9 +1,5 @@
 .game-board {
-  background-color: var(--pink);
-  /* width: 120vmin;
-    height: 64vmin; */
-  /* margin-left: 2%;
-  margin-right: 2%; */
+  background-color: var(--purple2);
 
   display: grid;
   grid-template-rows: repeat(16, 3.5vmin);
@@ -20,18 +16,11 @@
   word-break: break-all;
 }
 
-/* .board-and-stats {
-  text-align: left;
-} */
 
 .game-board-small {
-  background-color: var(--primary);
-  /* width: 120vmin;
-    height: 64vmin; */
+  background-color: var(--pink);
   width: 31.5vmin;
   height: 31.5vmin;
-  /* margin-left: 2%;
-  margin-right: 2%; */
 
   display: grid;
   grid-template-rows: repeat(9, 3.5vmin);
@@ -56,13 +45,9 @@ small h1 {
 }
 
 .game-board-medium {
-  background-color: var(--primary);
-  /* width: 120vmin;
-    height: 64vmin; */
+  background-color: var(--pink);
   width: 56vmin;
   height: 56vmin;
-  /* margin-left: 2%;
-  margin-right: 2%; */
 
   display: grid;
   grid-template-rows: repeat(16, 3.5vmin);
@@ -86,13 +71,9 @@ small h1 {
 }
 
 .game-board-large {
-  background-color: var(--primary);
-  /* width: 120vmin;
-    height: 64vmin; */
+  background-color: var(--pink);
   width: 90vmin;
   height: 48vmin;
-  /* margin-left: 2%;
-  margin-right: 2%; */
 
   display: grid;
   grid-template-rows: repeat(16, 3vmin);
